<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            >

            <Button
                android:id="@+id/todaybtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/today" />
            <Button
                android:id="@+id/weekbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/week" />
        </LinearLayout>



        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margintop"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/total"
                android:textSize="@dimen/margin" />

            <TextView
                android:id="@+id/edittotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:ems="14"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"

                android:layout_weight="1"
                android:text="@string/s"
                android:textSize="@dimen/margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"

                android:layout_weight="1"
                android:text="@string/spent"
                android:textSize="@dimen/margin" />

            <TextView
                android:id="@+id/editspent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:ems="14"

                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"

                android:layout_weight="1"
                android:text="@string/s"
                android:textSize="@dimen/margin" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="@string/ba"
                android:textSize="@dimen/margin"

                />

            <TextView
                android:id="@+id/editbalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin"
                android:ems="14"

                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                android:text="@string/s"
                android:textSize="@dimen/margin" />


        </LinearLayout>

        <com.jjoe64.graphview.GraphView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:id="@+id/graph" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>